test/testFiles/fail/prolog2_fail.fcl
#include "filename.ext"
BEGINPROLOG
a :1
b:2
ENDPROLOG
